--- a/common-common/pom.xml
+++ b/common-common/pom.xml
@@ -10,9 +10,6 @@
     <artifactId>common-common</artifactId>
     <packaging>jar</packaging>
 
-    <name>common-common</name>
-    <url>http://maven.apache.org</url>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -56,5 +53,10 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
